# Render-2D

./: .gitignore  CMakeLists.txt  ENGINE_DESIGN.md  README.md  vcpkg.json
examples/: headless_demo.cpp  sdl_opengl_sandbox.cpp  sdl_sandbox.cpp
include/render2d/debug/: physics_debug_renderer.hpp
include/render2d/math/: aabb.hpp  vec2.hpp
include/render2d/physics/: world.hpp
include/render2d/render/: camera2d.hpp  color.hpp  draw_list.hpp  image.hpp  opengl_renderer.hpp  software_renderer.hpp  sprite_atlas.hpp  texture.hpp  tile_map.hpp
src/debug/: physics_debug_renderer.cpp
src/physics/: world.cpp
src/render/: opengl_renderer.cpp  software_renderer.cpp
tests/: physics_tests.cpp
